chore: Project cleanup and optimizations